# mp3-parser

./: CMakeLists.txt  README.md
docs/: id3v2.4.0-frames.rst  id3v2.4.0-structure.rst
lib/: CMakeLists.txt  abstractframe.cpp  abstractframe.h  abstracttimestampframe.cpp  abstracttimestampframe.h  comrframe.cpp  comrframe.h  encrgrid.cpp  encrgrid.h  equ2frame.cpp  equ2frame.h  etcoframe.cpp  etcoframe.h  id3v2.cpp  id3v2.h  id3v2parser.cpp  id3v2parser.h  linkframe.cpp  linkframe.h  owneframe.cpp  owneframe.h  pcntframe.cpp  pcntframe.h  popmframe.cpp  popmframe.h  possframe.cpp  possframe.h  rbufframe.cpp  rbufframe.h  rva2frame.cpp  rva2frame.h  rvrbframe.cpp  rvrbframe.h  seekframe.cpp  seekframe.h  syltframe.cpp  syltframe.h  textframe.cpp  textframe.h  txxxwxxx.cpp  (+9 more)
