add_library(mp3
        abstractframe.h abstractframe.cpp
        id3v2.h id3v2.cpp
        id3v2parser.h id3v2parser.cpp
        textframe.h textframe.cpp
        urlframe.h urlframe.cpp
        txxxwxxx.h txxxwxxx.cpp
        etcoframe.h etcoframe.cpp
        rbufframe.h rbufframe.cpp
        userframe.h userframe.cpp
        syltframe.h syltframe.cpp
        seekframe.h seekframe.cpp
        ufidpriv.h ufidpriv.cpp
        encrgrid.h encrgrid.cpp
        owneframe.h owneframe.cpp
        usltcomm.h usltcomm.cpp
        linkframe.h linkframe.cpp
        comrframe.h comrframe.cpp
        equ2frame.h equ2frame.cpp
        rvrbframe.h rvrbframe.cpp
        pcntframe.h pcntframe.cpp
        popmframe.h popmframe.cpp
        possframe.h possframe.cpp
        rva2frame.h rva2frame.cpp abstracttimestampframe.cpp abstracttimestampframe.h)